# Yasunami

./: .env  README.md  botconf.py  build.py  publishers.txt  pyproject.toml  requirements.txt
commands/misc/: assignment1 (1).py  gamepass.py
commands/music/: radio.py
commands/psinfo/: psgame.py
conf/: claim_channels.txt  embeds.py
conf/channel/: claim_channels.txt  override_accounts.txt
db/: main.py  yasunami.db
webhook/: main.py
