[project]
name = "dcbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "about-time==3.1.1",
    "aiofiles==0.8.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.14",
    "aiosignal==1.4.0",
    "async-timeout==4.0.2",
    "attrs==25.3.0",
    "audioop-lts==0.2.1",
    "autopep8==1.6.0",
    "beautifulsoup4==4.11.1",
    "bs4==0.0.1",
    "certifi==2022.6.15",
    "cffi==1.17.1",
    "charset-normalizer==3.0.1",
    "config>=0.5.1",
    "discord==2.3.2",
    "discord-py==2.5.2",
    "discord-webhook>=1.4.1",
    "dotenv==0.9.9",
    "fake-useragent==0.1.11",
    "ffmpeg-python==0.2.0",
    "frozenlist==1.7.0",
    "future==1.0.0",
    "grapheme==0.6.0",
    "idna==3.4",
    "lxml>=5.2.1",
    "multidict==6.6.3",
    "numpy==2.3.1",
    "pandas==2.3.1",
    "pd==0.0.4",
    "propcache==0.3.2",
    "psnawp==3.0.0",
    "pycodestyle==2.8.0",
    "pycparser==2.22",
    "pynacl==1.5.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "rcon==2.4.9",
    "requests>=2.32.3",
    "six==1.17.0",
    "soupsieve==2.3.2.post1",
    "termcolor==1.1.0",
    "timeout-decorator==0.5.0",
    "toml==0.10.2",
    "tzdata==2025.2",
    "urllib3==1.26.13",
    "yarl==1.20.1",
    "yt-dlp==2025.6.30",
    "zomboid-rcon==1.1.0",
]
